<resources>
    <string name="app_name">Okada</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_pick_up">Let\'s Go</string>
    <string name="text_drop_off">End Trip</string>
    <string name="btn_message">Message</string>
    <string name="btn_call">Call</string>
    <string name="btn_confirm_state">I have arrived</string>
    <string name="btn_pickup_state">Let\'s Go</string>
    <string name="btn_dropoff_state"> End Trip</string>
    <string name="btn_checkout_state"> Check Out</string>
    <string name="login">Login</string>
    <string name="create_a_new_account">Create Account</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="image">Image</string>
    <string name="failed">Authentication Failed</string>
    <string name="facebook_app_id">1012187466490277</string>
    <string name="fb_login_protocol_scheme">fb_facebook_app_id</string>
    <string name="cancel_login">Login Cancelled</string>
    <string name="error_login">Login Error</string>
    <string name="firebase_error_login">Error</string>
    <string name="chooseLang">Choose Language</string>
    <string name="customer">CUSTOMER</string>
    <string name="driver">DRIVER</string>
    <string name="cars">car</string>
    <string name="bikes">bike</string>
    <string name="location_pick_up">Where do you want us to pick you up</string>
    <string name="where_to_go">Where do you want to go?</string>
    <string name="chauffeur_arriver">Your driver has arrived</string>
    <string name="closing">Close</string>
    <string name="Nom">Driver Full Name</string>
    <string name="Process">Processing your booking...</string>
    <string name="Can">Cancel</string>
    <string name="profile">User Profile</string>
    <string name="name">Name</string>
    <string name="eml">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="update">Update Profile</string>
    <string name="pass">Password</string>
    <string name="trip">How is your trip?</string>
    <string name="feedback">Please help us to improve\nthe experience with our app\nby evaluating this trip</string>
    <string name="submit">Send feedback</string>
    <string name="Service">Your Service</string>
    <string name="voitr">Car</string>
    <string name="bke">Bike</string>
    <string name="bkns">Book Now</string>
    <string name="Current">Current Location</string>
    <string name="pick_lcl">Pickup Location</string>
    <string name="dcln">Decline</string>
    <string name="accpt">Accept</string>
    <string name="PRC">Price:</string>
    <string name="ex">Exit</string>
    <string name="proc">Process</string>
    <string name="info">Driver information</string>
    <string name="vhcl_type">Vehicle type: bike</string>
    <string name="nearby_driver">The driver is nearby.</string>
    <string name="found">Yeah!\nWe found you a driver.</string>
    <string name="Google">Login with Google</string>
    <string name="New">New ? Click To Register Before Login</string>
    <string name="ride">Choose your ride</string>
    <string name="choose_language">Choose Language</string>
    <string name="YOUR_SERVER_KEY">AAAA_Yq5ECU:APA91bHLsxfnchxef8vmYxZdM_6luM-xblJ6moT_4uePNSz8PjiRZUorH-RJQrhQj3afwufQtN4490ik8Q2fWso-3UEnfOOzRmKFbMF4lcwjYLzm-od8cJ15fbGUKrmUXfeL2V1ngaZL</string>
    <string name="ADS">ca-app-pub-6221472085805950~7791703064</string>
    <string name="default_notification_channel_id">New Ride Request</string>
    <string name="Phone">Login With Phone</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_number">We will send you an One Time Password on this mobile number</string>
    <string name="_237">+237 - </string>
    <string name="_123456789">123456789</string>
    <string name="get_otp">GET OTP</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="lang">Langue</string>
    <string name="Get_Otp">Get Otp</string>
    <string name="numero">please enter phone number</string>
    <string name="otp">Wait for the code I sent You</string>
    <string name="verify_otp">Submit</string>
    <string name="or">or</string>


</resources>