<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:overScrollMode="never"
    android:background="@drawable/background"
    android:scrollbars="none"
    tools:context=".activities.OtpActivity">



    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/relativeLayout"
        android:layout_marginTop="-50dp"
         />

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/imageView"
        android:orientation="vertical"
        android:padding="20dp">








        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/socialicons"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal">




        </LinearLayout>





        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp" />




    </RelativeLayout>

    <EditText
        android:id="@+id/email"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:hint="@string/email_id"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />



    <EditText
        android:id="@+id/password"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:layout_below="@id/email"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:passwordToggleEnabled="true" />


    <Button
        android:id="@+id/ah_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_below="@id/password"
        android:background="@color/colorAccent"
        android:text="@string/login"

        android:textColor="@android:color/black" />



    <TextView
        android:id="@+id/signInWithGoogle"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_below="@id/moveToRegisterTextView"
        android:layout_marginTop="25dp"
        android:background="@drawable/rectangle"
        android:gravity="center"
        android:text="@string/Google"
        android:textSize="18sp"
        android:textColor="@color/sky_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563" />


    <ImageView
        android:id="@+id/google_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/moveToRegisterTextView"
        android:layout_marginTop="23dp"
        android:src="@drawable/google" />


    <TextView
        android:id="@+id/signInWithEmail"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/rectangle1"
        android:gravity="center"
        android:text="@string/Phone"
        android:textColor="@color/sky_blue"
        android:layout_below="@id/signInWithGoogle"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563" />



    <ImageView
        android:id="@+id/phone_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/signInWithGoogle"
        android:layout_marginTop="23dp"
        android:src="@drawable/ic_call" />


    <RelativeLayout
        android:id="@+id/showlangdialog"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/signInWithEmail"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/background_color"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/dialog_language"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:dropDownVerticalOffset="35dp"
            android:popupBackground="@color/sky_blue"
            android:textColor="@color/white"
            android:text="@string/lang"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:src="@drawable/baseline_arrow_drop_down_24" />





    </RelativeLayout>





    <TextView
        android:id="@+id/moveToRegisterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ah_login"
        android:layout_marginStart="32dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="32dp"
        android:text="@string/New"
        android:textColor="@color/sky_blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />



</RelativeLayout>


